@@ -17,6 +17,7 @@
 from MDAnalysis.coordinates.base import Timestep, SingleFrameReader, Reader
 
 from numpy.testing import *
+import numpy as np
 
 """
 Isolate the API definitions of Readers independent of implementations
@@ -114,7 +115,7 @@ class _Multi(object):
     n_frames = 10
     n_atoms = 10
     readerclass = AmazingMultiFrameReader
-    reference = [i for i in range(10)]
+    reference = np.array([i for i in range(10)])
    
 
 class TestMultiFrameReader(_Multi, _TestReader):
@@ -173,6 +174,24 @@ class TestMultiFrameReader(_Multi, _TestReader):
     def test_slice_TE_1(self):
         def sl():
             return list(self.reader[1.2:2.5:0.1])
+        assert_raises(TypeError, sl)
+
+    def test_getitem_list_ints(self):
+        sl = [0, 1, 4, 5]
+        self._check_slice(sl)
+
+    def test_getitem_array_ints(self):
+        sl = np.array([0, 1, 4, 5])
+        self._check_slice(sl)
+
+    def test_list_TE(self):
+        def sl():
+            return list(self.reader[[0, 'a', 5, 6]])
+        assert_raises(TypeError, sl)
+
+    def test_array_TE(self):
+        def sl():
+            return list(self.reader[np.array([1.2, 3.4, 5.6])])
         assert_raises(TypeError, sl)
 
 
