@@ -26,6 +26,8 @@ Enhancements
   * `Atom` and `AtomGroup` now expose occupancy value as `occupancy` and
     `occupancies` properties (Issue #396)
   * XYZReader now supports frame indexing (Issue #428)
+  * Reader objects can now be sliced using lists and arrays of indices
+    (Issue #437)
 
 Changes
   * An AtomGroup with 0 atoms now yields an `IndexError` on call to
